--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "swiper": "^8.0.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
