--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "swiper": "^8.0.7",
-    "uuid": "^8.3.2"
+    "swiper": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
