--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "swiper": "^8.0.7"
+    "swiper": "^8.0.7",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
